--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 torch==2.0.1
 torch-scatter==2.1.1
-rdkit==2023.3.3
 torch-geometric==2.3.1
+rdkit==2023.3.3
 pandas==2.1.1
 numpy==1.26.0
 networkx==3.1
 selfies==2.1.0
+matplotlib==3.8.0
